<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/menu_settings">
        <ListPreference
            android:key="pref_current_provider"
            android:title="@string/pref_current_provider_title"
            android:summary="@string/pref_current_provider_summary"
            android:entries="@array/provider_entries"
            android:entryValues="@array/provider_values"
            android:defaultValue="@string/current_provider"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_models_category_title">
        <ListPreference
            android:key="pref_model_openai"
            android:title="@string/pref_model_openai_title"
            android:entries="@array/openai_model_entries_default"
            android:entryValues="@array/openai_model_values_default"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/provider_openai_default_model" />

        <ListPreference
            android:key="pref_model_anthropic"
            android:title="@string/pref_model_anthropic_title"
            android:entries="@array/anthropic_model_entries_default"
            android:entryValues="@array/anthropic_model_values_default"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/provider_anthropic_default_model" />

        <ListPreference
            android:key="pref_model_perplexity"
            android:title="@string/pref_model_perplexity_title"
            android:entries="@array/perplexity_model_entries_default"
            android:entryValues="@array/perplexity_model_values_default"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/provider_perplexity_default_model" />

        <ListPreference
            android:key="pref_model_groq"
            android:title="@string/pref_model_groq_title"
            android:entries="@array/groq_model_entries_default"
            android:entryValues="@array/groq_model_values_default"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/provider_groq_default_model" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_gateway_category_title">
        <EditTextPreference
            android:key="pref_gateway_base_url"
            android:title="@string/pref_gateway_base_url_title"
            android:dialogTitle="@string/pref_gateway_base_url_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="pref_gateway_api_key"
            android:title="@string/pref_gateway_api_key_title"
            android:dialogTitle="@string/pref_gateway_api_key_title"
            android:summary="@string/pref_gateway_api_key_summary" />

        <Preference
            android:key="pref_gateway_test"
            android:title="@string/pref_gateway_test_title"
            android:summary="@string/pref_gateway_test_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_tone_category_title">
        <ListPreference
            android:key="pref_tone_empathy"
            android:title="@string/pref_tone_empathy_title"
            android:summary="@string/pref_tone_empathy_summary"
            android:entries="@array/tone_empathy_entries"
            android:entryValues="@array/tone_empathy_values"
            android:defaultValue="empathetic"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_tone_approach"
            android:title="@string/pref_tone_approach_title"
            android:summary="@string/pref_tone_approach_summary"
            android:entries="@array/tone_approach_entries"
            android:entryValues="@array/tone_approach_values"
            android:defaultValue="gentle"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_tone_energy"
            android:title="@string/pref_tone_energy_title"
            android:summary="@string/pref_tone_energy_summary"
            android:entries="@array/tone_energy_entries"
            android:entryValues="@array/tone_energy_values"
            android:defaultValue="calm"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_tone_mood"
            android:title="@string/pref_tone_mood_title"
            android:summary="@string/pref_tone_mood_summary"
            android:entries="@array/tone_mood_entries"
            android:entryValues="@array/tone_mood_values"
            android:defaultValue="serious"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_tone_length"
            android:title="@string/pref_tone_length_title"
            android:summary="@string/pref_tone_length_summary"
            android:entries="@array/tone_length_entries"
            android:entryValues="@array/tone_length_values"
            android:defaultValue="brief"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_tone_style"
            android:title="@string/pref_tone_style_title"
            android:summary="@string/pref_tone_style_summary"
            android:entries="@array/tone_style_entries"
            android:entryValues="@array/tone_style_values"
            android:defaultValue="intimate"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_chat_category_title">
        <EditTextPreference
            android:key="pref_system_prompt"
            android:title="@string/pref_system_prompt_title"
            android:dialogTitle="@string/pref_system_prompt_title"
            android:summary="@string/pref_system_prompt_summary" />
    </PreferenceCategory>

</PreferenceScreen>
